add bqInit config value to disable table init

--- a/helm/jarvis-alpha-innotec-exporter/templates/configmap.yaml
+++ b/helm/jarvis-alpha-innotec-exporter/templates/configmap.yaml
@@ -9,6 +9,7 @@ data:
   websocket-host-port: {{ .Values.config.websocketHostPort | quote }}
   websocket-login-code: {{ .Values.config.websocketLoginCode | quote }}
   bq-enable: {{ .Values.config.bqEnable | quote }}
+  bq-init: {{ .Values.config.bqInit | quote }}
   bq-project-id: {{ .Values.config.bqProjectID | quote }}
   bq-dataset: {{ .Values.config.bqDataset | quote }}
   bq-table: {{ .Values.config.bqTable | quote }}
