--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -1,6 +1,6 @@
 labels:
   app-group: jarvis
-  language: golang
+  language: rust
 
 version:
   semver:
@@ -10,15 +10,6 @@ version:
 stages:
   build-lint-and-package:
     parallelStages:
-      build:
-        image: golang:1.15.5-alpine3.12
-        env:
-          CGO_ENABLED: 0
-          GOOS: linux
-        commands:
-        - go test -test.short ./...
-        - go build -a -installsuffix cgo -ldflags "-X main.appgroup=${ESTAFETTE_LABEL_APP_GROUP} -X main.app=${ESTAFETTE_GIT_NAME} -X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
-
       lint-helm-chart:
         image: extensions/helm:stable
         action: lint
@@ -27,24 +18,21 @@ stages:
         image: extensions/helm:stable
         action: package
 
+  clone-charts-repo:
+    image: extensions/git-clone:stable
+    repo: helm-charts
+    branch: master
+
+  publish-helm-chart:
+    image: extensions/helm:stable
+    action: publish
+    repoUrl: https://helm.jorritsalverda.com/
+
   bake:
     image: extensions/docker:stable
     action: build
-    inline: |
-      FROM scratch
-
-      LABEL maintainer="JorritSalverda" \
-            description="The ${ESTAFETTE_GIT_NAME} component is an application to read information from an Alpha Innotec heatpump and insert metrics into BigQuery"
-
-      COPY ${ESTAFETTE_GIT_NAME} /
-      COPY ca-certificates.crt /etc/ssl/certs/
-
-      ENTRYPOINT ["/${ESTAFETTE_GIT_NAME}"]
     repositories:
     - jsalverda
-    path: ./publish
-    copy:
-    - /etc/ssl/certs/ca-certificates.crt
 
   push-to-docker-hub:
     image: extensions/docker:stable
@@ -64,13 +52,3 @@ stages:
   #   values: |-
   #     secret:
   #       gcpServiceAccountKeyfile: '{}'
-
-  clone-charts-repo:
-    image: extensions/git-clone:stable
-    repo: helm-charts
-    branch: master
-
-  publish-helm-chart:
-    image: extensions/helm:stable
-    action: publish
-    repoUrl: https://helm.jorritsalverda.com/
