--- a/helm/jarvis-alpha-innotec-exporter/values.yaml
+++ b/helm/jarvis-alpha-innotec-exporter/values.yaml
@@ -7,6 +7,7 @@ cronjob:
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
   successfulJobsHistoryLimit: 2
+  ttlSecondsAfterFinished: 3600
 
 config:
   websocketHostIP: 127.0.0.1
