set RUST_LOG from logLevel value

--- a/helm/jarvis-alpha-innotec-exporter/values.yaml
+++ b/helm/jarvis-alpha-innotec-exporter/values.yaml
@@ -35,7 +35,7 @@ config:
       navigation: Informatie > Temperaturen
       item: Retour
 
-logFormat: json
+logLevel: debug
 
 image:
   repository: jsalverda/jarvis-alpha-innotec-exporter
