--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde-xml-rs = "0.4"
 websocket = "0.26"
 regex = "1.5"
 jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.44" }
+kube = { version = "0.70.0", features = ["runtime", "derive"] }
