--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,9 @@ jobs:
       GITVERSION_SEMVER: ${{ needs.gitversion.outputs.semVer }}
     steps:
       - uses: actions/checkout@v2
-      - uses: azure/setup-helm@v1
+      - uses: azure/setup-helm@v3
+        with:
+          version: v3.10.1
       - run: helm lint --with-subcharts helm/jarvis-alpha-innotec-exporter
       - run: helm package --app-version $GITVERSION_SEMVER --version $GITVERSION_SEMVER --dependency-update helm/jarvis-alpha-innotec-exporter
       - uses: actions/checkout@v2
