--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,14 @@ include = ["src/**/*", "LICENSE", "README.md"]
 
 [dependencies]
 chrono = "0.4"
+jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.65" }
+kube = { version = "0.82", default-features = false, features = ["client", "runtime", "derive"] }
+openssl = { version = "0.10", features = ["vendored"] }
+regex = "1.5"
+serde = { version = "1.0", features = ["derive"] }
+serde-xml-rs = "0.4"
+tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
-serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.5", features = ["macros"] }
 uuid = { version = "0.8", features = ["v4"] }
-serde-xml-rs = "0.4"
 websocket = "0.26"
-regex = "1.5"
-jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.57" }
-kube = { version = "0.70.0", features = ["runtime", "derive"] }
